Archive2/d0/bfc5cee442f84d/output
main.cpp: In destructor 'Demo::~Demo()':
main.cpp:14:15: error: 'cout' is not a member of 'std'
     ~Demo() { std::cout << "some kind of deleter runs :)\n"; }
               ^
main.cpp: In function 'int main()':
main.cpp:32:5: error: 'cout' is not a member of 'std'
     std::cout << "done\n";
     ^
